Initial commit: Complete microservices fitness tracker application with React frontend